# browser_for_sns

./: .gitignore  CHANGES.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.tsx  app.css  electron-webview.d.ts  guardianScript.ts  types.ts
native/: CMakeLists.txt  main_linux.cpp
